2025-06-16T12:46:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15681220753 # 1042
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-16
* notice: last 14d: unq all: 52 106
* notice: prev accum: outdated-unq outdated-all / unq all: 4242 8965 / 4319 9070
* notice: next accum: outdated-unq outdated-all / unq all: 4242 8965 / 4320 9072
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -1 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-06-02 2025-06-16]

2025-06-15T12:40:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15663286722 # 1040
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-15
* notice: last 14d: unq all: 52 105
* notice: prev accum: outdated-unq outdated-all / unq all: 4241 8964 / 4312 9062
* notice: next accum: outdated-unq outdated-all / unq all: 4242 8965 / 4319 9070
* notice: prev exec diff / last date diff / accum: unq all: +7 +8 -0 -0 / +7 +8 -0 -0 / 7 8
* notice: removed / changed dates: [2025-06-01] / [2025-06-15]

2025-06-14T12:39:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15652113949 # 1038
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-14
* notice: last 14d: unq all: 47 98
* notice: prev accum: outdated-unq outdated-all / unq all: 4241 8964 / 4309 9058
* notice: next accum: outdated-unq outdated-all / unq all: 4241 8964 / 4312 9062
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2025-06-14]

2025-06-14T01:46:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15647113551 # 1037