@@ -1,12 +1,7 @@
 {
-  "count": 106,
-  "uniques": 52,
+  "count": 100,
+  "uniques": 51,
   "clones": [
-    {
-      "timestamp": "2025-06-02T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
     {
       "timestamp": "2025-06-03T00:00:00Z",
       "count": 10,
